--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     background-color:cornsilk;
 }
-.github{
+.download{
     border: none;
     padding: 20px 34px;
     text-align: center;
@@ -15,50 +15,42 @@ body{
     position: fixed;
     right: 60px;
     
+    
 }
 .button1 {
     background-color: black; 
     color: white; 
     border: 2px solid black;
+    
 }
 .button1:hover {
     background-color: white;
     color: black;
 }
-.visit1{
-
+.panel{
+  position: fixed;
   background-color: rgb(243, 96, 70);
   color: white;
   border: 2px solid black;
   margin: 20px;
   padding: 20px 34px;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
+  text-align: left;
+  text-decoration: none;
+  display: inline-block;
   height: 100px;
   width: 94%;
   margin-top: 20px;
-
-  
 }
 
-.visit2{
-    position: absolute;
-    background-color: lightcoral;
-    color: white;
-    border: 2px solid black;
-    margin: 20px;
-    padding: 20px;
-    height: 250px;
-    width: 600px;
-    margin-top: 40px;
-    border-radius: 30px;
+.midle{
+  background-color: rgb(161, 107, 97);
+  color: white;
+  padding: 20px 34px;
+  text-align: left;
+  text-decoration: none;
+  display: inline-block;
+  height: 4000px;
+  width: 100%;
+
 }
 
-.a1{
-    font-size: 18px;
-}
-
-.a2{
-    font-size: 15px;
-}
