--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,34 @@
-body{
-    background-color:cornsilk;
+#background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: cover;
 }
-.download{
+.main-div{
+  background-color: #262626;
+  margin:auto;
+  width: 55%;
+  position: relative;
+  min-height: calc(100vh);
+  margin-left: auto;
+  margin-right: auto;
+}
+#name{
+  color: white;
+  margin: auto;
+  padding: auto;
+  text-align: center;
+  top: 10px;
+  position: relative;
+
+}
+.text{
+  font-family: 'Press Start 2P', cursive;
+  font-size: 50%;
+}
+
+
+/* .download{
     border: none;
     padding: 20px 34px;
     text-align: center;
@@ -53,4 +80,4 @@ body{
   width: 100%;
 
 }
-
+ */
