--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
-#background{
+body{
+  background-image: url(foto/backfoto.png);
   width: 100%;
   height: 100%;
-  position: absolute;
+
   background-size: cover;
+  background-repeat: repeat-y;
+  background-attachment: fixed;
 }
+
 .main-div{
   background-color: #262626;
   margin:auto;
@@ -12,6 +16,7 @@
   min-height: calc(100vh);
   margin-left: auto;
   margin-right: auto;
+  height: 5000px;
 }
 #name{
   color: white;
@@ -24,10 +29,22 @@
 }
 .text{
   font-family: 'Press Start 2P', cursive;
-  font-size: 50%;
+  font-size: 200%;
 }
 
+#video{
+  /* width: 90%;
 
+  position: relative;
+   */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  width: 90%;
+  height: 500px;
+  
+}
 /* .download{
     border: none;
     padding: 20px 34px;
