--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
   height: 100%;
 
   background-size: cover;
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
@@ -42,8 +42,60 @@ body{
   margin-right: auto;
   margin-top: 50px;
   width: 90%;
-  height: 500px;
+  height: 10%;
   
+}
+
+
+
+
+@media only screen and ( max-width: 640px ) {
+  body{
+    width: 100%;
+    height: 100%;
+  
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+  }
+  
+  .main-div{
+    background-color: #262626;
+    margin:auto;
+    width: 100%;
+    position: relative;
+    min-height: calc(100vh);
+    margin-left: auto;
+    margin-right: auto;
+    height: 5000px;
+  }
+  #name{
+    color: white;
+    margin: auto;
+    padding: auto;
+    text-align: center;
+    top: 10px;
+    position: relative;
+  
+  }
+  .text{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 200%;
+  }
+  
+  #video{
+    /* width: 90%;
+  
+    position: relative;
+     */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    width: 90%;
+    height: 500px;
+    
+  }
 }
 /* .download{
     border: none;
