--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,69 @@
 body{
-  background-image: url(foto/backfoto.png);
-  width: 100%;
-  height: 100%;
+  background-image: url(../WEB/../photo/backfoto.png);
 
+  
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-.main-div{
+#screen{
   background-color: #262626;
   margin:auto;
   width: 55%;
-  position: relative;
   min-height: calc(100vh);
-  margin-left: auto;
-  margin-right: auto;
   height: 5000px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
-#name{
+
+header > #name{
   color: white;
   margin: auto;
-  padding: auto;
+  padding-top: 1%;
   text-align: center;
-  top: 10px;
   position: relative;
-
+  overflow-x:hidden;
+  width: fit-content;
 }
 .text{
   font-family: 'Press Start 2P', cursive;
-  font-size: 200%;
+  font-size: 70px;
 }
 
 #video{
-  /* width: 90%;
 
-  position: relative;
-   */
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
-  width: 99.9%;
-  height: 10%;
-  
+  width: 100%;
+  height: 40%;
+}
+.row{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: blue;
+  width: 330px;
+  color: #FFFFFF;
+  border-radius: 16px;
+  padding: 24px;
+  gap: 20px;
+}
+
+.about{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 25px;
 }
 
 
 
 
-
-
-@media only screen and ( max-width: 640px ) {
-  body{
-    width: 100%;
-    height: 100%;
-  
-    background-size: cover;
-    background-repeat: repeat-y;
-    background-attachment: fixed;
-  }
-  
-  .main-div{
-    background-color: #262626;
-    margin:auto;
-    width: 100%;
-    position: relative;
-    min-height: calc(100vh);
-    margin-left: auto;
-    margin-right: auto;
-    height: 5000px;
-  }
-  #name{
-    color: white;
-    margin: auto;
-    padding: auto;
-    text-align: center;
-    top: 10px;
-    position: relative;
-  
-  }
-  .text{
-    font-family: 'Press Start 2P', cursive;
-    font-size: 200%;
-  } */
-  
-  #video{
-    /* width: 90%;
-  
-    position: relative;
-     */
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    width: 90.9%;
-    min-height: 10%;
-    max-height:  60%;
-    
-  }
-} 
+ 
 /* .download{
     border: none;
     padding: 20px 34px;
@@ -152,4 +116,6 @@ body{
   width: 100%;
 
 }
+
+
  */
