--- a/css/styles.css
+++ b/css/styles.css
@@ -38,26 +38,29 @@ header > #name{
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
-  width: 100%;
+  width: 99.9%;
   height: 40%;
 }
 .row{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background-color: blue;
-  width: 330px;
+  background-color: #262626;
+  text-align: center;
   color: #FFFFFF;
   border-radius: 16px;
   padding: 24px;
-  gap: 20px;
+
 }
 
 .about{
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  gap: 25px;
+  gap: 100px;
+  padding-top: 10px;
+  justify-content: center;
+
 }
 
 
