--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,24 @@
 body{
   background-image: url(../WEB/../photo/backfoto.png);
+  width: 100%;
+  height: 100%;
 
-  
+  display: block;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 #screen{
+  display: block;
   background-color: #262626;
   margin:auto;
   width: 55%;
+  position: relative;
   min-height: calc(100vh);
-  height: 5000px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 header > #name{
@@ -29,17 +32,18 @@ header > #name{
 }
 .text{
   font-family: 'Press Start 2P', cursive;
-  font-size: 70px;
+  font-size: 65px;
 }
 
 #video{
-
+  overflow: hidden;
+  position: relative;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
-  width: 99.9%;
-  height: 40%;
+  width: 90%;
+  height: 600px;
 }
 .row{
   display: flex;
@@ -57,68 +61,154 @@ header > #name{
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  gap: 100px;
+  gap: 1px;
   padding-top: 10px;
   justify-content: center;
-
 }
 
 
-
-
- 
-/* .download{
-    border: none;
-    padding: 20px 34px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 30px;
-    margin-top: 15px;
-    position: fixed;
-    right: 60px;
-    
-    
+.download{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 1px;
+  padding-top: 10px;
+  justify-content: center;
+  
 }
+.button{
+  border-radius: 16px;
+  padding: 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 .button1 {
-    background-color: black; 
-    color: white; 
-    border: 2px solid black;
-    
+  background-color: black; 
+  color: white; 
+  border: 2px solid black;
+  
 }
 .button1:hover {
-    background-color: white;
-    color: black;
+  background-color: white;
+  color: black;
 }
-.panel{
-  position: fixed;
-  background-color: rgb(243, 96, 70);
-  color: white;
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px 34px;
-  text-align: left;
-  text-decoration: none;
-  display: inline-block;
-  height: 100px;
-  width: 94%;
-  margin-top: 20px;
+/*  */
+
+:root {
+  --slide_heigth: ;
 }
 
-.midle{
-  background-color: rgb(161, 107, 97);
-  color: white;
-  padding: 20px 34px;
-  text-align: left;
-  text-decoration: none;
-  display: inline-block;
-  height: 4000px;
-  width: 100%;
-
+.slide_photo{
+  width: 50%;
+  height: 100%;
+  position: relative;
 }
 
+#bg_color{
+  background-color: #141313;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
 
- */
+#loop-slider {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  width: 90%;
+
+}
+#loop-slider:hover .controls::before, #loop-slider:hover .controls::after {
+  opacity: 1;
+}
+
+#loop-slider #img-group  {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  transform: translateX(-100vw);
+  transition: transform 600ms ease-in-out;
+  -webkit-transition: transform 600ms ease-in-out;
+}
+#loop-slider #img-group .slide  {
+  position: relative;
+  display: inline;
+  float: left;
+  width: 100vw;
+  max-width: 100%;
+  height: calc(100vw / 3.24);
+  top: 0;
+  margin: 0;
+  padding: 0;
+  z-index: 99;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.controls {
+  z-index: 1000;
+  position: absolute;
+  top: 50%;
+  display: block;
+  width: 33px;
+  height: 50px;
+  transform: translateY(-50%);
+}
+.controls:hover {
+  cursor: pointer;
+}
+.controls::before, .controls::after {
+  content: "";
+  display: block;
+  position: absolute;
+  background: white;
+  width: 35px;
+  height: 6px;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.7);
+  top: 12px;
+  transition: opacity 200ms ease-in-out;
+  -webkit-transition: opacity 200ms ease-in-out;
+  opacity: 0;
+}
+.controls.prev {
+  left: 20px;
+}
+.controls.prev::before, .controls.prev::after {
+  top: 12px;
+  left: 0;
+}
+.controls.prev::before {
+  transform: rotate(-45deg);
+  border-top-left-radius: 2px;
+}
+.controls.prev::after {
+  transform: translateY(21px) rotate(45deg);
+  border-bottom-left-radius: 2px;
+}
+.controls.next {
+  right: 20px;
+}
+.controls.next::before, .controls.next::after {
+  top: 12px;
+  right: 0;
+}
+.controls.next::before {
+  transform: rotate(45deg);
+  border-top-left-radius: 2px;
+}
+.controls.next::after {
+  transform: translateY(21px) rotate(-45deg);
+  border-bottom-left-radius: 2px;
+}
